--- a/vaccines/index.html
+++ b/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Vaccines</h1>
           
-            <p class="small-text">Last updated&nbsp;March 16, 2021 at 10:22 AM</p>
+            <p class="small-text">Last updated&nbsp;March 16, 2021 at 10:28 AM</p>
           
         </div>
       </div>
@@ -1149,8 +1149,8 @@
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
                   <div class="card-body">
-            <p>There are five ways you may be able to find an appointment after March 15. Vaccine supply remains limited nationwide.</p>
-<ol><li>Your healthcare provider: We strongly recommend individuals with these conditions seek vaccination with a primary health care provider or system, or in an alternate clinical setting.&nbsp; Check first with your usual health care provider to see if they have vaccines and available appointments. Those who have vaccines may also begin reaching out to you, as a patient with a significant, high-risk medical condition or disability known to the provider, to schedule your vaccine appointment.</li><li>Pharmacies: You can check your local pharmacies to see if they have vaccines and available appointments. For the month of March, federal direction is that all school and child care staff are prioritized for pharmacy vaccines, so supply for other populations remains limited.</li><li>Your local health department: Your local health department’s website will have information about how to find available vaccine appointments, even as national supply remains limited. At your appointment, you should also be asked to provide a form of verification.&nbsp;</li><li>Community pop-up clinics:<em> </em>These clinics for people with high-risk medical conditions and disabilities will roll out in mid-March and will be targeted for equity to those living in communities with the lowest Healthy Places Index scores.&nbsp; Community partners will reach out to people eligible for the pop-up clinics.</li><li>MyTurn: Throughout the spring, as vaccine supply increases and the statewide vaccinator network grows, you will be able to schedule an appointment through California’s MyTurn, in two ways:<ul><li>On-line at <a href="http://www.myturn.ca.gov">www.myturn.ca.gov</a>. The MyTurn website is accessible to people with disabilities and in eight languages: English, Spanish, simplified and traditional Chinese, Tagalog, Korean, Arabic, and Vietnamese.</li><li>Calling the COVID-19 Hotline at 1-833-422-4255 or 1-833-4CA-4ALL (M-F 8AM-8PM, Sa-Su 8AM-5PM).&nbsp; The hotline is accessible to people with disabilities and offers services in English and Spanish, with connections to interpretive services in more than 250 languages.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li></ul></li></ol>
+            <p>There are five ways you can find an appointment. Vaccine supply remains limited nationwide.</p>
+<ol><li>Your healthcare provider: We strongly recommend individuals with these conditions seek vaccination with a primary health care provider or system, or in an alternate clinical setting.  Check first with your usual health care provider to see if they have vaccines and available appointments. Those who have vaccines may also begin reaching out to you, as a patient with a significant, high-risk medical condition or disability known to the provider, to schedule your vaccine appointment.</li><li>Pharmacies: You can check your local pharmacies to see if they have vaccines and available appointments. For the month of March, federal direction is that all school and child care staff are prioritized for pharmacy vaccines, so supply for other populations remains limited.</li><li>Your local health department: Your local health department’s website will have information about how to find available vaccine appointments, even as national supply remains limited. At your appointment, you should also be asked to provide a form of verification. </li><li>Community pop-up clinics:<em> </em>These clinics for people with high-risk medical conditions and disabilities are targeted for equity to those living in communities with the lowest Healthy Places Index (HPI) scores.  Community partners will reach out to people eligible for the pop-up clinics.</li><li> MyTurn: Throughout the spring, as vaccine supply increases and the statewide vaccinator network grows, you will be able to schedule an appointment through California’s MyTurn, in two ways:<ul><li>On-line at <a href="http://www.myturn.ca.gov">myturn.ca.gov</a>. The MyTurn website is accessible to people with disabilities and in eight languages:<ul><li> English</li><li>Spanish</li><li>Simplified and traditional Chinese</li><li>Tagalog</li><li>Korean</li><li>Arabic</li><li>Vietnamese</li></ul></li><li>Calling the COVID-19 Hotline at 1-833-422-4255 or 1-833-4CA-4ALL (M-F 8AM-8PM, Sa-Su 8AM-5PM).  The hotline is accessible to people with disabilities and offers services in English and Spanish, with connections to interpretive services in more than 250 languages.</li></ul></li></ol>
 <p>You will be asked to state that you have a high-risk medical condition or disability, either to book an available appointment or to register for notice of future appointments made available as supply increases. You will be able to request an accommodation at your vaccine site through MyTurn. &nbsp;</p>
 
                   </div>
@@ -1182,7 +1182,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
                   <div class="card-body">
-            <p>To protect confidentiality, verification documentation of the diagnosis or type of disability is not required. Instead, anyone meeting the eligibility requirements will be asked to sign a self-attestation that they meet the criteria for high-risk medical conditions or disabilities.</p>
+            <p>To protect confidentiality, verification of the diagnosis or type of disability is not required. Instead, anyone meeting the eligibility requirements will be asked to sign a self-attestation that they meet the criteria for high-risk medical conditions or disabilities.</p>
 
                   </div>
                 </div>
@@ -1205,7 +1205,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
                   <div class="card-body">
-            <p>All vaccine clinics in California are required to ensure sites and services are accessible in accordance with ADA (Americans with Disabilities Act) requirements.</p>
+            <p>Yes. All vaccine clinics in California are required to ensure sites and services are accessible in accordance with ADA (Americans with Disabilities Act) requirements.</p>
 
                   </div>
                 </div>
