--- a/ar/state-dashboard/index.html
+++ b/ar/state-dashboard/index.html
@@ -408,7 +408,7 @@
     </div>
   </div>
 
-  <h3 class="has-text-align-center pb-0 mb-2 mt-3" id="county-status">تعيينات الفئات الحالية اعتبارًا من 12 مارس 2021</h3>
+  <h3 class="has-text-align-center pb-0 mb-2 mt-3" id="county-status">تعيينات الفئات الحالية اعتبارًا من 16 مارس 2021</h3>
   <p class="mt-0">قد تحدث تعيينات الفئات في أي يوم من الأسبوع وقد تحدث أكثر من مرة في الأسبوع. حدد مقاطعة لمعرفة المنطقة الموجودة بها.</p>
 
   <div class="tableauPlaceholder mb-0" id="mapChartContainer"></div>
@@ -417,7 +417,7 @@
 
 
 <div class="pl-2 text-small">
-  <p class="small-text">تعتمد جميع البيانات وتعيينات الفئات على نتائج الأسبوع المنتهي في 27 فبراير 2021. اطلع على كيفية تعيين الفئات وتغييرها، وكذلك البيانات التاريخية للمقاطعات (<strong>الرسم البياني لمخطط كاليفورنيا</strong>) على <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID19CountyMonitoringOverview.aspx">مخطط إدارة الصحة العامة بولاية كاليفورنيا (CDPH) لإطار عمل أكثر أمانًا للاقتصاد</a>. تعرف على الطاقة الاستيعابية لوحدات العناية المركزة الإقليمية في <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Regional-Stay-at-Home-Order-Data-Projections.aspx">بيانات وحدات العناية المركزة الصادرة عن إدارة الصحة العامة بولاية كاليفورنيا</a>.</p>
+  <p class="small-text">تعتمد جميع البيانات وتعيينات الفئات على نتائج الأسبوع المنتهي في 6 مارس 2021. اطلع على كيفية تعيين الفئات وتغييرها، وكذلك البيانات التاريخية للمقاطعات (<strong>الرسم البياني لمخطط كاليفورنيا</strong>) على <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID19CountyMonitoringOverview.aspx">مخطط إدارة الصحة العامة بولاية كاليفورنيا (CDPH) لإطار عمل أكثر أمانًا للاقتصاد</a>. تعرف على الطاقة الاستيعابية لوحدات العناية المركزة الإقليمية في <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Regional-Stay-at-Home-Order-Data-Projections.aspx">بيانات وحدات العناية المركزة الصادرة عن إدارة الصحة العامة بولاية كاليفورنيا</a>.</p>
 </div>
 
 
