--- a/safer-economy/index.html
+++ b/safer-economy/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Blueprint for a Safer Economy</h1>
           
-            <p class="small-text">Last updated&nbsp;March 16, 2021 at 11:42 AM</p>
+            <p class="small-text">Last updated&nbsp;March 16, 2021 at 11:50 AM</p>
           
         </div>
       </div>
@@ -178,7 +178,7 @@
 
 
 
-<h2 class="has-text-align-center" id="tier-assignments">Current tier assignments as of March 12, 2021</h2>
+<h2 class="has-text-align-center" id="tier-assignments">Current tier assignments as of March 16, 2021</h2>
 
 
 
@@ -186,7 +186,7 @@
 
 
 
-<p>On March 12, 2021, California reached 2 million vaccination doses in the vaccine equity metric. New Blueprint tier assignments were announced and go into effect on March 14, 2021.</p>
+<p>On March 12, 2021, California reached 2 million vaccination doses in the vaccine equity metric. New Blueprint tier assignments were announced and went into effect on March 14, 2021.</p>
 
 
 
@@ -202,7 +202,7 @@
 
 
 
-<p class="small-text">All data and tier assignments are based on results from week ending February 27, 2021.&nbsp;See how tiers are assigned and changed, as well as county historical data (<strong>California Blueprint Data Chart</strong>), at <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID19CountyMonitoringOverview.aspx">CDPH&#8217;s Blueprint for a Safer Economy framework</a>. Learn about regional ICU capacity at <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Regional-Stay-at-Home-Order-Data-Projections.aspx">CDPH&#8217;s ICU Data</a>.</p>
+<p class="small-text">All data and tier assignments are based on results from week ending March 6, 2021.&nbsp;See how tiers are assigned and changed, as well as county historical data (<strong>California Blueprint Data Chart</strong>), at <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID19CountyMonitoringOverview.aspx">CDPH&#8217;s Blueprint for a Safer Economy framework</a>. Learn about regional ICU capacity at <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Regional-Stay-at-Home-Order-Data-Projections.aspx">CDPH&#8217;s ICU Data</a>.</p>
 
 
 
