--- a/help-for-seniors/index.html
+++ b/help-for-seniors/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Help for older adults</h1>
           
-            <p class="small-text">Last updated&nbsp;March 17, 2021 at 9:07 AM</p>
+            <p class="small-text">Last updated&nbsp;March 17, 2021 at 9:12 AM</p>
           
         </div>
       </div>
@@ -229,7 +229,7 @@
 
 
 
-<ul><li><a href="https://files.covid19.ca.gov/pdf/wp/great-plates-delivered-program-guidance.pdf">Program guidance<span class="pdf-link-icon no-underline-icon" aria-hidden="true">PDF</span></a></li><li><a href="https://files.covid19.ca.gov/pdf/wp/data-reporting-questionnaire_great-plates-delivered-program.docx">Data reporting questionnaire (DOC)</a></li><li><a href="https://files.covid19.ca.gov/pdf/wp/great-plates-delivered-local-administrator-faqs.pdf">Local administrator FAQs<span class="pdf-link-icon no-underline-icon" aria-hidden="true">PDF</span></a></li><li><a href="https://files.covid19.ca.gov/pdf/wp/great-plates-delivered-restaurants-faqs.pdf">Restaurants FAQs<span class="pdf-link-icon no-underline-icon" aria-hidden="true">PDF</span></a></li><li><a href="https://vimeo.com/417407667/7521d9f985">Guidance for food facilities<span class="ca-gov-icon-external-link link-icon" aria-hidden="true"></a></li></ul>
+<ul><li><a href="https://files.covid19.ca.gov/pdf/wp/great-plates-delivered-program-guidance.pdf">Program guidance</a></li><li><a href="https://files.covid19.ca.gov/pdf/wp/data-reporting-questionnaire_great-plates-delivered-program.docx">Data reporting questionnaire (DOC)</a></li><li><a href="https://files.covid19.ca.gov/pdf/wp/great-plates-delivered-local-administrator-faqs.pdf">Local administrator FAQs</a></li><li><a href="https://files.covid19.ca.gov/pdf/wp/great-plates-delivered-restaurants-faqs.pdf">Restaurants FAQs</a></li><li><a href="https://vimeo.com/417407667/7521d9f985">Guidance for food facilities</a></li></ul>
 
 
 
