--- a/vaccines/index.html
+++ b/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Vaccines</h1>
           
-            <p class="small-text">Last updated&nbsp;March 19, 2021 at 6:56 AM</p>
+            <p class="small-text">Last updated&nbsp;March 19, 2021 at 10:13 AM</p>
           
         </div>
       </div>
@@ -254,34 +254,38 @@
 
 
 
+<div style="display:none;" class="js-qa js-qa-question">Who qualifies  for vaccination as Individuals at higher risk?</div>
+
+
+
 <cagov-accordion>
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h3 id="Vaccinating-those-at-higher-risk">Individuals at higher risk</h3>
+            <h3 class=" js-qa js-qa-answer" id="Vaccinating-those-at-higher-risk">Individuals at higher risk</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
                   <div class="card-body">
-            <p>Vaccinations are available for the estimated 4.4 million people in California at higher risk for serious COVID-19 illness. This includes those with certain significant high-risk medical conditions, disabilities, illness, living spaces, or work environments.</p>
-<p>Individuals with these conditions are strongly encouraged to check first with your usual health care provider. They can advise if you can get your vaccination with them, or in an alternate clinical setting.</p>
-<p><strong>Health conditions</strong></p>
-<p>Healthcare providers may use their clinical judgement to vaccinate individuals aged 16-64 who are <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Provider-Bulletin-2-12-21.aspx">deemed to be at highest risk<strong> </strong></a>to get very sick from COVID-19 due to the following severe health conditions:</p>
-<ul><li><strong>Cancer</strong>, current with weakened immune system</li><li><strong>Chronic kidney disease</strong>, stage 4 or above</li><li><strong>Chronic pulmonary disease, </strong>oxygen dependent</li><li><strong>Down syndrome</strong></li><li><strong>Solid organ transplant, </strong>leading to a weakened immune system</li><li><strong>Pregnancy</strong></li><li><strong>Sickle cell disease</strong></li><li><strong>Heart conditions</strong>, such as heart failure, coronary artery disease, or cardiomyopathies (but not hypertension)</li><li><strong>Severe obesity</strong> (Body Mass Index ≥ 40 kg/m<sup>2</sup>)</li><li><strong>Type 2 diabetes mellitus</strong> with hemoglobin A1c level greater than 7.5%</li></ul>
-<p><strong>Disabilities or illness</strong></p>
-<p>Healthcare providers may also vaccinate individuals with&nbsp; developmental or other severe disabilities or illness if:</p>
-<ul><li>The individual is likely to develop severe life-threatening illness or death from COVID-19 infection</li><li>Acquiring COVID-19 will limit the individual&#8217;s ability to get ongoing care or services vital to their well-being and survival</li><li>Providing adequate and timely COVID care will be particularly challenging as a result of the individual&#8217;s disability.</li></ul>
-<p>These include people with a range of physical and behavioral disabilities, such as:</p>
-<ul><li>People with serious mental illness (SMI)</li><li>Those with serious substance use disorder (SUD)</li><li>All enrolled consumers of:<ul><li>Regional centers</li><li>Independent living centers&nbsp;</li><li>In-home supportive services</li><li>Community-based adult services/adult day health centers</li><li>Medi-Cal HIV/AIDS waiver&nbsp;</li><li>Medi-Cal home and community-based alternatives waiver</li><li>Medi-Cal assisted living waiver</li><li>Programs of all-inclusive care for the elderly&nbsp;</li><li>California children’s services program (if the child is 16-21 years old)</li><li>California genetically handicapped persons program</li></ul></li></ul>
-<p>See CDPH’s <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Health-Care-Information-Notice-3-11-21.pdf">Health Care Information Notice</a> for details.</p>
-<p><strong>Congregate living spaces&nbsp;</strong></p>
-<p>Individuals who live or work in a congregate residential setting are eligible for COVID-19 vaccination, which includes:&nbsp;&nbsp;</p>
-<ul><li>Incarceration/detention facility</li><li>Homeless shelter</li><li>Behavioral health facility.&nbsp;</li></ul>
-<p>These settings are at high risk for outbreaks and have a concentration of individuals with high-risk chronic health conditions. This includes people experiencing homelessness, who may transition into congregate settings at short notice.</p>
-<p><strong><strong><strong>Transportation and logistics –&nbsp;public transit/airport and commercial airlines</strong></strong></strong></p>
-<p>Public transit workers, including airport workers for commercial airlines (but not private airplanes), will be eligible for COVID-19 vaccination. They are at high risk for occupational exposure, and maintaining continuity of transportation operations is critical.</p>
-<p>Find out more about eligibility requirements from the CDPH:</p>
-<ul><li><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/VaccineAllocationGuidelines.aspx">Updated COVID-19 Vaccine Eligibility Guidelines&nbsp;</a></li><li><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Provider-Bulletin-2-12-21.aspx">Provider Bulletin</a>&nbsp;</li><li><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/vaccine-high-risk-factsheet.aspx">Fact sheet</a></li></ul>
+            <p class=" js-qa js-qa-answer">Vaccinations are available for the estimated 4.4 million people in California at higher risk for serious COVID-19 illness. This includes those with certain significant high-risk medical conditions, disabilities, illness, living spaces, or work environments.</p>
+<p class=" js-qa js-qa-answer">Individuals with these conditions are strongly encouraged to check first with your usual health care provider. They can advise if you can get your vaccination with them, or in an alternate clinical setting.</p>
+<p class=" js-qa js-qa-answer"><strong>Health conditions</strong></p>
+<p class=" js-qa js-qa-answer">Healthcare providers may use their clinical judgement to vaccinate individuals aged 16-64 who are <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Provider-Bulletin-2-12-21.aspx">deemed to be at highest risk<strong> </strong></a>to get very sick from COVID-19 due to the following severe health conditions:</p>
+<ul class=" js-qa js-qa-answer"><li><strong>Cancer</strong>, current with weakened immune system</li><li><strong>Chronic kidney disease</strong>, stage 4 or above</li><li><strong>Chronic pulmonary disease, </strong>oxygen dependent</li><li><strong>Down syndrome</strong></li><li><strong>Solid organ transplant, </strong>leading to a weakened immune system</li><li><strong>Pregnancy</strong></li><li><strong>Sickle cell disease</strong></li><li><strong>Heart conditions</strong>, such as heart failure, coronary artery disease, or cardiomyopathies (but not hypertension)</li><li><strong>Severe obesity</strong> (Body Mass Index ≥ 40 kg/m<sup>2</sup>)</li><li><strong>Type 2 diabetes mellitus</strong> with hemoglobin A1c level greater than 7.5%</li></ul>
+<p class=" js-qa js-qa-answer"><strong>Disabilities or illness</strong></p>
+<p class=" js-qa js-qa-answer">Healthcare providers may also vaccinate individuals with&nbsp; developmental or other severe disabilities or illness if:</p>
+<ul class=" js-qa js-qa-answer"><li>The individual is likely to develop severe life-threatening illness or death from COVID-19 infection</li><li>Acquiring COVID-19 will limit the individual&#8217;s ability to get ongoing care or services vital to their well-being and survival</li><li>Providing adequate and timely COVID care will be particularly challenging as a result of the individual&#8217;s disability.</li></ul>
+<p class=" js-qa js-qa-answer">These include people with a range of physical and behavioral disabilities, such as:</p>
+<ul class=" js-qa js-qa-answer"><li>People with serious mental illness (SMI)</li><li>Those with serious substance use disorder (SUD)</li><li>All enrolled consumers of:<ul><li>Regional centers</li><li>Independent living centers&nbsp;</li><li>In-home supportive services</li><li>Community-based adult services/adult day health centers</li><li>Medi-Cal HIV/AIDS waiver&nbsp;</li><li>Medi-Cal home and community-based alternatives waiver</li><li>Medi-Cal assisted living waiver</li><li>Programs of all-inclusive care for the elderly&nbsp;</li><li>California children’s services program (if the child is 16-21 years old)</li><li>California genetically handicapped persons program</li></ul></li></ul>
+<p class=" js-qa js-qa-answer">See CDPH’s <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Health-Care-Information-Notice-3-11-21.pdf">Health Care Information Notice</a> for details.</p>
+<p class=" js-qa js-qa-answer"><strong>Congregate living spaces&nbsp;</strong></p>
+<p class=" js-qa js-qa-answer">Individuals who live or work in a congregate residential setting are eligible for COVID-19 vaccination, which includes:&nbsp;&nbsp;</p>
+<ul class=" js-qa js-qa-answer"><li>Incarceration/detention facility</li><li>Homeless shelter</li><li>Behavioral health facility.&nbsp;</li></ul>
+<p class=" js-qa js-qa-answer">These settings are at high risk for outbreaks and have a concentration of individuals with high-risk chronic health conditions. This includes people experiencing homelessness, who may transition into congregate settings at short notice.</p>
+<p class=" js-qa js-qa-answer"><strong><strong><strong>Transportation and logistics –&nbsp;public transit/airport and commercial airlines</strong></strong></strong></p>
+<p class=" js-qa js-qa-answer">Public transit workers, including airport workers for commercial airlines (but not private airplanes), will be eligible for COVID-19 vaccination. They are at high risk for occupational exposure, and maintaining continuity of transportation operations is critical.</p>
+<p class=" js-qa js-qa-answer">Find out more about eligibility requirements from the CDPH:</p>
+<ul class=" js-qa js-qa-answer"><li><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/VaccineAllocationGuidelines.aspx">Updated COVID-19 Vaccine Eligibility Guidelines&nbsp;</a></li><li><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Provider-Bulletin-2-12-21.aspx">Provider Bulletin</a>&nbsp;</li><li><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/vaccine-high-risk-factsheet.aspx">Fact sheet</a></li></ul>
 
                   </div>
                 </div>
@@ -414,19 +418,15 @@
 
 
 
-<div style="display:none;" class="js-qa js-qa-answer">See <a href="https://covid19.ca.gov/vaccines/#Who-will-get-vaccinated-next">Who will get vaccinated next</a> </div>
+<h3 class="js-qa js-qa-answer" id="Who-will-get-vaccinated-next">Who will get vaccinated next</h3>
 
 
 
-<h3 id="Who-will-get-vaccinated-next">Who will get vaccinated next</h3>
+<p class="js-qa js-qa-answer">All Californians should have access to COVID-19 vaccines by spring 2021.&nbsp;</p>
 
 
 
-<p>All Californians should have access to COVID-19 vaccines by spring 2021.&nbsp;</p>
-
-
-
-<p>To be notified when it’s your turn, sign up at <a href="https://myturn.ca.gov">myturn.ca.gov</a> or call (833) 422-4255.</p>
+<p class="js-qa js-qa-answer">To be notified when it’s your turn, sign up at <a href="https://myturn.ca.gov">myturn.ca.gov</a> or call (833) 422-4255.</p>
 
 
 
@@ -474,7 +474,7 @@
 
 
 
-<p><strong>Special <strong>access</strong></strong> <strong>code for educators and childcare providers</strong></p>
+<p class="js-qa js-qa-answer"><strong>Special <strong>access</strong></strong> <strong>code for educators and childcare providers</strong></p>
 
 
 
